--- a/app/src/main/res/drawable/ic_thanks.xml
+++ b/app/src/main/res/drawable/ic_thanks.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="500dp"
     android:height="500dp"
     android:viewportWidth="500"
-    android:viewportHeight="500">
+    android:viewportHeight="500"
+    tools:ignore="VectorRaster">
     <path
         android:fillColor="#ebebeb"
         android:pathData="M106.12,275.13s-9.08,2.4 -1.44,22 13.3,29.5 13.3,29.5 1.25,4.5 -2.46,4.8 -11.61,-1.78 -13.68,2.52 0.77,9.15 7.2,13.66 20.14,14.92 21.38,15.86 2.31,3.08 -0.19,3.69 -20.73,0.68 -20.18,9.33 20.52,18.28 22.68,19.38 2.6,2.1 2.3,3.31 -6.44,0.67 -11.63,0.9 -11.16,1.41 -10.42,6.37 12,16.38 41.5,22.29l13.86,1.85 8.75,-11c17.28,-24.65 17.56,-40.67 14.67,-44.77s-8,-0.84 -11.95,2.57 -8,8 -9,7.38 -1.44,-1.71 -0.63,-4 8.63,-23 3.06,-29.67 -18.82,5.89 -21.05,7.16 -2.92,-1 -2.68,-2.54 3,-18.53 4.54,-26.23 0.41,-13.11 -4.22,-14.86c-4.46,-1.68 -8.74,5.28 -11.64,7.62s-5.09,-1.78 -5.09,-1.78 -2.73,-11.07 -10.72,-30.53 -16.41,-14.78 -16.41,-14.78" />
