--- a/app/src/main/res/drawable/cart_item_background.xml
+++ b/app/src/main/res/drawable/cart_item_background.xml
@@ -4,5 +4,5 @@
     <corners android:radius="30dp" />
     <stroke
         android:width="1dp"
-        android:color="#BAB1EE" />
+        android:color="@color/light_blue" />
 </shape>
