--- a/app/src/main/res/drawable/ic_empty_cart.xml
+++ b/app/src/main/res/drawable/ic_empty_cart.xml
@@ -1,8 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="500dp"
     android:height="500dp"
     android:viewportWidth="500"
-    android:viewportHeight="500">
+    android:viewportHeight="500"
+    tools:ignore="VectorRaster">
     <path
         android:fillColor="#f5f5f5"
         android:pathData="M11.62,337.53a238.19,137.52 0,1 0,476.38 0a238.19,137.52 0,1 0,-476.38 0z" />
