--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -19,6 +19,7 @@
         android:textSize="30sp" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView2"
@@ -30,6 +31,15 @@
         android:text="Save time! Reduce effort!"
         android:textColor="#062132"
         android:textSize="15sp" />
+
+    <ImageView
+        android:layout_width="275dp"
+        android:layout_height="275dp"
+        android:layout_above="@id/register_button"
+        android:layout_below="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_welcome_illustration" />
 
     <Button
         android:id="@+id/register_button"
@@ -58,10 +68,10 @@
         android:id="@+id/get_started_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@id/textView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="35dp"
-        android:layout_above="@id/textView"
         android:foregroundGravity="center"
         android:indeterminateTint="@color/primary_blue"
         android:visibility="visible" />
