--- a/app/src/main/res/layout/cart_list_item.xml
+++ b/app/src/main/res/layout/cart_list_item.xml
@@ -20,6 +20,7 @@
                 android:id="@+id/cart_item_image_view"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
+                android:contentDescription="@string/app_name"
                 android:scaleType="centerCrop"
                 android:src="@drawable/sample_item_image" />
 
