--- a/app/src/main/res/layout/dialog_logout_confirmation.xml
+++ b/app/src/main/res/layout/dialog_logout_confirmation.xml
@@ -11,7 +11,7 @@
         android:layout_margin="20dp"
         android:fontFamily="@font/worksans_medium"
         android:text="Do you want to logout for sure?"
-        android:textColor="@color/primary_blue"
+        android:textColor="@color/black"
         android:textSize="17sp" />
 
     <LinearLayout
@@ -22,6 +22,7 @@
 
         <Button
             android:id="@+id/yes_quit_button"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -39,6 +40,7 @@
 
         <Button
             android:id="@+id/no_stay_button"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
