--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="20dp"
-                android:contentDescription="Profile"
+                android:contentDescription="@string/app_name"
                 app:srcCompat="@drawable/ic_profile_active" />
 
         </com.facebook.shimmer.ShimmerFrameLayout>
