--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="child_tabs_inactive">#E8EBFA</color>
     <color name="child_tabs_active">#B0C2F6</color>
 
-    <color name="add_to_cart_yellow_color">#FF9900</color>
+    <color name="add_to_cart_yellow_color">#FFBE55</color>
     <color name="added_to_cart_green_color">#0FA958</color>
 
     <color name="colorGrey">#dddddd</color>
