--- a/app/src/main/res/drawable/ic_transaction_history.xml
+++ b/app/src/main/res/drawable/ic_transaction_history.xml
@@ -5,13 +5,13 @@
     android:viewportWidth="18"
     android:viewportHeight="17">
     <path
-        android:fillColor="@color/primary_blue"
+        android:fillColor="@color/white"
         android:pathData="M5.6867,3.4416H13.2833V1.3963C13.2833,0.6951 13.7832,1.0735 14.1598,1.3963C14.8415,1.9807 16.3219,3.2662 16.7894,3.7337C17.0815,4.0259 17.0815,4.0259 16.7894,4.3181L14.1598,6.9476C13.5754,7.532 12.6989,7.2398 13.2833,6.6555L15.9128,4.0259L14.1598,2.565V2.8572V4.0259C14.1598,4.3181 14.1598,4.3181 13.8676,4.3181H12.9911H5.6867C3.3493,4.3181 1.5963,6.9476 1.8885,8.7007C2.0408,9.6146 1.0508,9.361 1.012,8.7007C0.7782,4.7271 4.0311,3.5389 5.6867,3.4416Z"
         android:strokeWidth="0.5"
-        android:strokeColor="@color/primary_blue" />
+        android:strokeColor="@color/white" />
     <path
-        android:fillColor="@color/primary_blue"
+        android:fillColor="@color/white"
         android:pathData="M12.3337,14.1383L4.7372,14.1383V16.1836C4.7372,16.8848 4.2372,16.5063 3.8607,16.1836C3.1789,15.5992 1.6986,14.3136 1.2311,13.8462C0.9389,13.554 0.9389,13.554 1.2311,13.2618L3.8607,10.6322C4.445,10.0479 5.3215,10.3401 4.7372,10.9244L2.1076,13.554L3.8607,15.0149V14.7227V13.554C3.8607,13.2618 3.8607,13.2618 4.1528,13.2618H5.0293L12.3337,13.2618C14.6711,13.2618 16.4241,10.6322 16.132,8.8792C15.9796,7.9652 16.9697,8.2188 17.0085,8.8792C17.2422,12.8528 13.9894,14.0409 12.3337,14.1383Z"
         android:strokeWidth="0.5"
-        android:strokeColor="@color/primary_blue" />
+        android:strokeColor="@color/white" />
 </vector>
