--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,28 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".MainFragments.HomeFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/home_search_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+        android:layout_alignParentTop="true">
 
-        <ImageView
-            android:id="@+id/home_search_back_button"
-            android:layout_width="20dp"
-            android:layout_height="match_parent"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="15dp"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_back" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/home_search_back_card"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="5dp"
+            android:backgroundTint="@color/transparent"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:padding="10dp"
+                android:src="@drawable/ic_back" />
+
+        </androidx.cardview.widget.CardView>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/home_search_input_layout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="0dp"
+            android:layout_toStartOf="@+id/home_maps_card"
+            android:layout_toEndOf="@id/home_search_back_card"
             android:hint="search..."
             android:textColorHint="@color/light_blue"
             app:endIconMode="clear_text"
@@ -40,82 +55,42 @@
                 android:id="@+id/home_search_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/search_background"
                 android:fontFamily="@font/worksans_regular"
                 android:imeOptions="actionSearch"
                 android:inputType="text"
                 android:maxLines="1"
-                android:padding="12dp"
                 android:scrollHorizontally="true"
                 android:textColorLink="@color/primary_blue" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <ImageView
-            android:id="@+id/home_map_button"
-            android:layout_width="20dp"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_map" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/home_maps_card"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:backgroundTint="@color/transparent"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?android:attr/selectableItemBackground"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="0dp">
 
-    </LinearLayout>
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/app_name"
+                android:padding="10dp"
+                android:src="@drawable/ic_map" />
 
-    <!--    <ImageView-->
-    <!--        android:id="@+id/home_search_back_button"-->
-    <!--        android:layout_width="20dp"-->
-    <!--        android:layout_height="20dp"-->
-    <!--        android:layout_alignTop="@+id/home_search_input_layout"-->
-    <!--        android:layout_alignBottom="@+id/home_search_input_layout"-->
-    <!--        android:layout_alignParentStart="true"-->
-    <!--        android:layout_margin="10dp"-->
-    <!--        android:contentDescription="@string/app_name"-->
-    <!--        android:src="@drawable/ic_back" />-->
+        </androidx.cardview.widget.CardView>
 
-    <!--    <com.google.android.material.textfield.TextInputLayout-->
-    <!--        android:id="@+id/home_search_input_layout"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_alignParentTop="true"-->
-    <!--        android:layout_marginStart="10dp"-->
-    <!--        android:layout_marginBottom="5dp"-->
-    <!--        android:layout_toStartOf="@+id/home_map_button"-->
-    <!--        android:layout_toEndOf="@id/home_search_back_button"-->
-    <!--        android:hint="search..."-->
-    <!--        android:textColorHint="@color/light_blue"-->
-    <!--        app:endIconMode="clear_text"-->
-    <!--        app:endIconTint="@color/inactive_icon_color"-->
-    <!--        app:expandedHintEnabled="true"-->
-    <!--        app:hintTextColor="@color/transparent"-->
-    <!--        app:startIconDrawable="@drawable/ic_search_active"-->
-    <!--        app:startIconTint="@color/steps_progress_color">-->
-
-    <!--        <com.google.android.material.textfield.TextInputEditText-->
-    <!--            android:id="@+id/home_search_edit_text"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:background="@drawable/search_background"-->
-    <!--            android:fontFamily="@font/worksans_regular"-->
-    <!--            android:imeOptions="actionSearch"-->
-    <!--            android:inputType="text"-->
-    <!--            android:maxLines="1"-->
-    <!--            android:padding="12dp"-->
-    <!--            android:scrollHorizontally="true"-->
-    <!--            android:textColorLink="@color/primary_blue" />-->
-
-    <!--    </com.google.android.material.textfield.TextInputLayout>-->
-
-    <!--    <ImageView-->
-    <!--        android:id="@+id/home_map_button"-->
-    <!--        android:layout_width="20dp"-->
-    <!--        android:layout_height="20dp"-->
-    <!--        android:layout_alignTop="@+id/home_search_input_layout"-->
-    <!--        android:layout_alignBottom="@+id/home_search_input_layout"-->
-    <!--        android:layout_alignParentEnd="true"-->
-    <!--        android:layout_marginStart="10dp"-->
-    <!--        android:layout_marginTop="11dp"-->
-    <!--        android:layout_marginEnd="20dp"-->
-    <!--        android:contentDescription="@string/app_name"-->
-    <!--        android:src="@drawable/ic_map" />-->
+    </RelativeLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/home_fragment_swipe"
