--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -160,30 +160,6 @@
                             android:layout_columnWeight="1"
                             android:layout_gravity="fill" />
 
-                        <include
-                            layout="@layout/shopping_item_shimmer_layout"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_rowWeight="1"
-                            android:layout_columnWeight="1"
-                            android:layout_gravity="fill" />
-
-                        <include
-                            layout="@layout/shopping_item_shimmer_layout"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_rowWeight="1"
-                            android:layout_columnWeight="1"
-                            android:layout_gravity="fill" />
-
-                        <include
-                            layout="@layout/shopping_item_shimmer_layout"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_rowWeight="1"
-                            android:layout_columnWeight="1"
-                            android:layout_gravity="fill" />
-
                     </GridLayout>
 
                 </com.facebook.shimmer.ShimmerFrameLayout>
@@ -191,7 +167,7 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/home_shopping_items_recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:visibility="gone" />
 
             </LinearLayout>
