--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="added_to_cart_green_color">#0FA958</color>
 
     <color name="colorGrey">#dddddd</color>
+    <color name="lightBlack">#858387</color>
 </resources>
