--- a/app/src/main/res/layout/fragment_item_expanded.xml
+++ b/app/src/main/res/layout/fragment_item_expanded.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ItemExpandedFragment">
+    tools:context=".MainFragments.ItemExpandedFragment">
 
     <View
         android:layout_width="match_parent"
@@ -78,6 +78,7 @@
         android:layout_below="@id/expanded_item_name_text_view"
         android:layout_centerHorizontal="true"
         android:layout_margin="5dp"
+        android:baselineAligned="false"
         android:weightSum="2">
 
         <LinearLayout
@@ -97,6 +98,7 @@
                 android:background="@color/child_tabs_inactive"
                 android:fontFamily="@font/worksans_medium"
                 android:gravity="center"
+                android:padding="2dp"
                 android:text="Price"
                 android:textColor="@color/light_blue"
                 android:textSize="17sp" />
@@ -131,12 +133,13 @@
                 android:background="@color/child_tabs_inactive"
                 android:fontFamily="@font/worksans_medium"
                 android:gravity="center"
+                android:padding="2dp"
                 android:text="In Stock"
                 android:textColor="@color/light_blue"
                 android:textSize="17sp" />
 
             <TextView
-                android:id="@+id/expanded_item_quantity_text_view"
+                android:id="@+id/expanded_item_in_stock_quantity_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -191,15 +194,16 @@
                 android:layout_marginEnd="15dp"
                 android:numStars="5"
                 android:progressTint="@color/primary_blue"
-                android:rating="1"
+                android:rating="1.5"
                 android:stepSize="1" />
 
             <TextView
+                android:id="@+id/expanded_item_rating_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/worksans_medium"
                 android:gravity="center"
-                android:text="1"
+                android:text="1.5"
                 android:textColor="@color/primary_blue" />
 
         </LinearLayout>
@@ -207,7 +211,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/shop_details_button"
+        android:id="@+id/expanded_item_shop_details_button"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_below="@id/expanded_item_store_rating_linear_layout"
@@ -231,20 +235,81 @@
         app:drawableEndCompat="@drawable/ic_next"
         app:drawableStartCompat="@drawable/ic_shop" />
 
-    <Button
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_margin="15dp"
-        android:background="@drawable/button_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:fontFamily="@font/worksans_medium"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:text="Add to cart"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/expanded_item_quantity_decrease_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:cardCornerRadius="100dp"
+                app:cardElevation="0dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_minus" />
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/expanded_item_add_to_cart_quantity"
+                android:layout_width="45dp"
+                android:layout_height="30dp"
+                android:background="@drawable/search_background"
+                android:fontFamily="@font/worksans_semibold"
+                android:gravity="center"
+                android:text="1"
+                android:textColor="@color/black" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/expanded_item_quantity_increase_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:cardCornerRadius="100dp"
+                app:cardElevation="0dp">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_plus" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/expanded_item_add_to_cart_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/button_background"
+            android:clickable="true"
+            android:focusable="true"
+            android:fontFamily="@font/worksans_medium"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:text="Add to cart"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:textSize="16sp" />
+
+    </LinearLayout>
 
 </RelativeLayout>
