--- a/app/src/main/res/layout/fragment_thanks.xml
+++ b/app/src/main/res/layout/fragment_thanks.xml
@@ -5,11 +5,64 @@
     android:layout_height="match_parent"
     tools:context=".CartChildFragments.ThanksFragment">
 
-    <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
+    <TextView
+        android:id="@+id/page_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:fontFamily="@font/worksans_semibold"
+        android:gravity="center_horizontal"
+        android:padding="10dp"
+        android:text="THANK YOU!"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_thanks_illustration" />
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/thanks_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:fontFamily="@font/worksans_regular"
+            android:gravity="center"
+            android:lineSpacingExtra="6dp"
+            android:text="Your order has been placed!You will receive an email receipt shortly!"
+            android:textColor="@color/primary_blue"
+            android:textSize="17sp" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_party" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/back_to_cart_button"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_background"
+        android:fontFamily="@font/worksans_semibold"
+        android:letterSpacing="0.08"
+        android:paddingStart="35dp"
+        android:paddingEnd="25dp"
+        android:text="Back to Cart"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="18sp" />
 
 </RelativeLayout>
