--- a/app/src/main/res/layout/shopping_item.xml
+++ b/app/src/main/res/layout/shopping_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -43,48 +42,30 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="2">
+                android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/shopping_item_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
-                    android:orientation="vertical">
+                    android:layout_margin="5dp"
+                    android:fontFamily="@font/worksans_medium"
+                    android:gravity="center"
+                    android:text="Item name"
+                    android:textColor="#062132"
+                    android:textSize="17sp" />
 
-                    <TextView
-                        android:id="@+id/shopping_item_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
-                        android:fontFamily="@font/worksans_medium"
-                        android:gravity="center"
-                        android:text="Item name"
-                        android:textColor="#062132"
-                        android:textSize="17sp" />
-
-                    <TextView
-                        android:id="@+id/shopping_item_price"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginEnd="5dp"
-                        android:fontFamily="@font/worksans_semibold"
-                        android:gravity="center"
-                        android:text="\u20B9 36.00"
-                        android:textColor="#062132"
-                        android:textSize="18sp" />
-
-                </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/shopping_item_add_to_cart"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.5"
-                    android:contentDescription="@string/app_name"
-                    android:padding="12dp"
-                    android:src="@drawable/ic_add_to_cart" />
+                <TextView
+                    android:id="@+id/shopping_item_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:fontFamily="@font/worksans_semibold"
+                    android:gravity="center"
+                    android:text="\u20B9 36.00"
+                    android:textColor="#062132"
+                    android:textSize="18sp" />
 
             </LinearLayout>
 
