--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,6 +7,7 @@
     tools:context=".ProfileSubFragments.HistoryFragment">
 
     <androidx.appcompat.widget.Toolbar
+        android:id="@+id/history_tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -44,5 +45,14 @@
             android:textSize="20sp" />
 
     </androidx.appcompat.widget.Toolbar>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/history_items_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/history_tool_bar"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
+        android:visibility="visible" />
 
 </RelativeLayout>
